Implemented getchoices
