# backend/javaBackend/src/main/java/Server/ResponseRequestClasses/restaurauntChoiceRequest.java
@@ -1,0 +1,6 @@
+package Server.ResponseRequestClasses;
+
+public record restaurauntChoiceRequest(
+        location currentLocation
+) {
+}
